resolved play button bug on mobile

--- a/src/Components/Shuffle/style.scss
+++ b/src/Components/Shuffle/style.scss
@@ -163,6 +163,7 @@
               height: 50px;
             }
             ._ControlsRSWP {
+              position: absolute;
               margin-top: 10px;
               .rswp__toggle {
                 transform: scale(0.9);
